tests/ui/cmse-nonsecure/cmse-nonsecure-entry/params-via-stack.stderr
error[E0798]: arguments for `"C-cmse-nonsecure-entry"` function too large to pass via registers
  --> $DIR/params-via-stack.rs:16:78
   |
LL | pub extern "C-cmse-nonsecure-entry" fn f1(_: u32, _: u32, _: u32, _: u32, _: u32, _: u32) {}
   |                                                                              ^^^^^^^^^^^ these arguments don't fit in the available registers
   |
   = note: functions with the `"C-cmse-nonsecure-entry"` ABI must pass all their arguments via the 4 32-bit available argument registers

error[E0798]: arguments for `"C-cmse-nonsecure-entry"` function too large to pass via registers
  --> $DIR/params-via-stack.rs:18:78
   |
LL | pub extern "C-cmse-nonsecure-entry" fn f2(_: u32, _: u32, _: u32, _: u16, _: u16) {}
   |                                                                              ^^^ this argument doesn't fit in the available registers
   |
   = note: functions with the `"C-cmse-nonsecure-entry"` ABI must pass all their arguments via the 4 32-bit available argument registers

error[E0798]: arguments for `"C-cmse-nonsecure-entry"` function too large to pass via registers
  --> $DIR/params-via-stack.rs:20:62
   |
LL | pub extern "C-cmse-nonsecure-entry" fn f3(_: u32, _: u64, _: u32) {}
   |                                                              ^^^ this argument doesn't fit in the available registers
   |
   = note: functions with the `"C-cmse-nonsecure-entry"` ABI must pass all their arguments via the 4 32-bit available argument registers

error[E0798]: arguments for `"C-cmse-nonsecure-entry"` function too large to pass via registers
  --> $DIR/params-via-stack.rs:22:64
   |
LL | pub extern "C-cmse-nonsecure-entry" fn f4(_: AlignRelevant, _: u32) {}
   |                                                                ^^^ this argument doesn't fit in the available registers
   |
   = note: functions with the `"C-cmse-nonsecure-entry"` ABI must pass all their arguments via the 4 32-bit available argument registers

error[E0798]: arguments for `"C-cmse-nonsecure-entry"` function too large to pass via registers
  --> $DIR/params-via-stack.rs:26:46
   |
LL | pub extern "C-cmse-nonsecure-entry" fn f5(_: [u32; 5]) {}
   |                                              ^^^^^^^^ this argument doesn't fit in the available registers
   |
   = note: functions with the `"C-cmse-nonsecure-entry"` ABI must pass all their arguments via the 4 32-bit available argument registers

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0798`.
